Contacts resource crud service working as expected.

--- a/pom.xml
+++ b/pom.xml
@@ -14,43 +14,100 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <failOnMissingWebXml>false</failOnMissingWebXml>
+
+        <mongodb.host>CRM_DB_PORT_27017_TCP_ADDR</mongodb.host>
+        <mongodb.port>CRM_DB_PORT_27017_TCP_PORT</mongodb.port>
+        <mongodb.username>CRM_DB_PORT_27017_TCP_USERNAME</mongodb.username>
+        <mongodb.password>CRM_DB_PORT_27017_TCP_PASSWORD</mongodb.password>
+        <mongodb.url>CRM_DB_PORT_27017_TCP_URL</mongodb.url>
+        <mongodb.app>DOCKER_APP_NAME</mongodb.app>
+
+        <version.javaee>7.0</version.javaee>
+        <version.lombok>1.14.8</version.lombok>
+        <version.morphia>1.1.0</version.morphia>
+        <version.jackson>2.4.6</version.jackson>
+        <version.commons_lang>2.6</version.commons_lang>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>7.0</version>
+            <version>${version.javaee}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.14.8</version>
+            <version>${version.lombok}</version>
         </dependency>
 
         <dependency>
             <groupId>org.mongodb.morphia</groupId>
             <artifactId>morphia</artifactId>
-            <version>1.1.0</version>
+            <version>${version.morphia}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${version.commons_lang}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${version.jackson}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${version.jackson}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${version.jackson}</version>
         </dependency>
 
     </dependencies>
 
     <build>
         <finalName>crm_bl</finalName>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 
     <profiles>
+        <profile>
+            <id>dev</id>
+        </profile>
         <profile>
             <!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
             <!-- Use this profile for any OpenShift specific customization your app will need. -->
             <!-- By default that is to put the resulting archive into the 'deployments' folder. -->
             <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
             <id>openshift</id>
+
+            <properties>
+                <mongodb.host>OPENSHIFT_MONGODB_DB_HOST</mongodb.host>
+                <mongodb.port>OPENSHIFT_MONGODB_DB_PORT</mongodb.port>
+                <mongodb.username>OPENSHIFT_MONGODB_DB_USERNAME</mongodb.username>
+                <mongodb.password>OPENSHIFT_MONGODB_DB_PASSWORD</mongodb.password>
+                <mongodb.url>OPENSHIFT_MONGODB_DB_URL</mongodb.url>
+                <mongodb.app>OPENSHIFT_APP_NAME</mongodb.app>
+            </properties>
+
             <build>
                 <finalName>jbosswildfly</finalName>
+
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
