Adjustment docker-compose file
The data of mongodb is storage on the host machine, not in the docker container

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,5 @@ local.properties
 # Created by .ignore support plugin (hsz.mobi)
 
 /docker/deploy/*.war*
+/docker/data/mongod.lock
+/docker/data/journal
